--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "MichaelHabib/drupal-bootstrap",
     "description": "",
-    "type": "project",
+    "type": "drupal-theme",
     "license": "GPL-2.0+",
     "authors": [
         {
